--- a/index.html
+++ b/index.html
@@ -52,13 +52,19 @@
             <a href="services.html">Services</a>
             <a href="affiliate.html">Affiliate</a>
             <a href="contact.html">Contact us</a>
+
+            <div class="side-social">
+                <img src="img/facebook.png" alt="Facebook">
+                <img src="img/twitter.png" alt="Twitter">
+                <img src="img/linkedin.png" alt="LinkedIn">
+            </div>
         </aside>
     <!-- hero section -->
     <section class="hero">
         <div class="hero-content">
             <div class="hero-text">
-                <h1>With Few Steps </h1>
-                <h2>Analyze, build &amp; deploy</h2>
+                <h1>With Few Steps: </h1>
+                <h2>Analyze, Build &amp; Deploy</h2>
                 <p>We help small, medium and large scale businesses in implementing
                     and integrating quality technology solutions to ensure forecasted growth.
                 </p>
@@ -295,11 +301,7 @@
                         <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
-                <div class="footer-social">
-                    <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-                    <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
-                    <a href="#"><img src="img/linkedin.png" alt="LinkedIn"></a>
-                </div>
+                
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2024 Fasticore Technology. All rights reserved.</p>
