--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             </div>
             <div class="header-links">
                 <ul>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="affiliate.html">Affiliate</a></li>
@@ -285,26 +286,64 @@
         </div>
     </section>
 
+    <!-- partners section  -->
+    <section class="partners-section">
+        <div class="container">
+            <h2>Our Partners</h2>
+            <p>We collaborate with industry-leading companies to deliver the best services to our clients.</p>
+            <div class="partners-grid">
+                <div class="partner-item">
+                    <img src="img/pecstech.jpeg" alt="PECSTECH Africa">
+                </div>
+                <div class="partner-item">
+                    <img src="img/j.jpeg" alt="Partner 2">
+                </div>
+                <div class="partner-item">
+                    <img src="img/zallasoft.png" alt="ZallaSoft IT">
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- footer  -->
     <footer class="footer-section">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-logo">
-                    <img src="img/Fasticore Technology.png" alt="Fasticore Logo">
+        <div class="footer-top">
+            <div class="container">
+                <div class="footer-about">
+                    <img src="img/Fasticore Technology.png" alt="Fasticore Technology">
+                    <p>Best software agency with your interest at heart.</p>
                 </div>
                 <div class="footer-links">
+                    <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="affiliate.html">Affiliate</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Affiliate</a></li>
+                        <li><a href="#">Contact Us</a></li>
                     </ul>
                 </div>
-                
+                <div class="footer-social">
+                    <h3>Follow Us</h3>
+                    <ul>
+                        <li><a href="#"><img src="img/facebook.png" alt="Facebook"></a></li>
+                        <li><a href="#"><img src="img/twitter.png" alt="Twitter"></a></li>
+                        <li><a href="#"><img src="img/linkedin.png" alt="LinkedIn"></a></li>
+                    </ul>
+                </div>
+                <div class="footer-newsletter">
+                    <h3>Subscribe to our Newsletter</h3>
+                    <form action="#">
+                        <input type="email" placeholder="Enter your email" required>
+                        <button type="submit">Subscribe</button>
+                    </form>
+                </div>
             </div>
-            <div class="footer-bottom">
-                <p>&copy; 2024 Fasticore Technology. All rights reserved.</p>
+        </div>
+        <div class="footer-bottom">
+            <div class="container">
+                <p>&copy; 2024 Fasticore Technology. All rights reserved. <a href="#">Terms of Service</a> * <a href="#">Privacy Policy</a> * <a href="#">Sitemap</a></p>
             </div>
         </div>
     </footer>
