--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
                 </ul>
             </div>
             <div class="header-social">
-                <a href="#" class="btn">Get Started</a>
-                <!-- <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
-                <a href="#"><img src="img/linkedin.png" alt="LinkedIn"></a> -->
+                
+                <a href="#"><img src="img/facebook.png" alt="Twitter"></a>
+                <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="img/linkedin.png" alt="LinkedIn"></a>
             </div>
             <div class="menu-toggle" id="menu-toggle"><img src="img/hamburger.png" alt=""></div>
         </div>
@@ -64,7 +65,7 @@
     <section class="hero">
         <div class="hero-content">
             <div class="hero-text">
-                <h1>With Few Steps: </h1>
+                <h1>With Few Steps:</h1>
                 <h2>Analyze, Build &amp; Deploy</h2>
                 <p>We help small, medium and large scale businesses in implementing
                     and integrating quality technology solutions to ensure forecasted growth.
@@ -78,41 +79,17 @@
     <!-- Our Services  -->
     <section class="services" id="services">
         <div class="container">
-            <h2 class="services-title">Our Services</h2>
+            <h1 class="services-title">Our Services</h1>
             <div class="services-wrapper">
                 <button class="scroll-btn left" id="scroll-left"><img src="img/move-left.png" alt=""></button>
                 <div class="services-content" id="services-content">
-                    <div class="service-item">
-                        <div class="service-icon">
-                            <img src="img/business.png" alt="Service 1">
-                        </div>
-                        <h3 class="service-title">Business Process Automation</h3>
-                        <p class="service-description">We provide different business automation process ranging from docuemnt management, customer relationship management, human resources management</p>
-                        <a href="#" class="view-details">View Details</a>
-                    </div>
-                    <div class="service-item">
-                        <div class="service-icon">
-                            <img src="img/graphics.png" alt="Service 2">
-                        </div>
-                        <h3 class="service-title">Graphics/Brand Identity Design</h3>
-                        <p class="service-description">With deep design principles, web design trends, and user experience as a key factor of an identity we provide effective and engaging brand identity for our clients.</p>
-                        <a href="#" class="view-details">View Details</a>
-                    </div>
-                    <div class="service-item">
-                        <div class="service-icon">
-                            <img src="img/software.png" alt="Service 3">
-                        </div>
-                        <h3 class="service-title">Software Consulting</h3>
-                        <p class="service-description">We provide expert advice adn guidance to organizations on software related issues.</p>
-                        <a href="#" class="view-details">View Details</a>
-                    </div>
                     <div class="service-item">
                         <div class="service-icon">
                             <img src="img/web.png" alt="Service 3">
                         </div>
                         <h3 class="service-title">Web Development</h3>
                         <p class="service-description">We build highly secured, scalable and fast mobile applications that meets your business needs</p>
-                        <a href="#" class="view-details">View Details</a>
+                        <a href="#" class="btn">View Details</a>
                     </div>
                     <div class="service-item">
                         <div class="service-icon">
@@ -120,7 +97,7 @@
                         </div>
                         <h3 class="service-title">Product Design</h3>
                         <p class="service-description">Our team of expert designers will help bring your ideas to life.</p>
-                        <a href="#" class="view-details">View Details</a>
+                        <a href="#" class="btn">View Details</a>  
                     </div>
                     <div class="service-item">
                         <div class="service-icon">
@@ -128,7 +105,31 @@
                         </div>
                         <h3 class="service-title">Search Engine Optimization</h3>
                         <p class="service-description">We optimize your website to be search engine friendly and improve online visibility.</p>
-                        <a href="#" class="view-details">View Details</a>
+                        <a href="#" class="btn">View Details</a>  
+                    </div>
+                    <div class="service-item">
+                        <div class="service-icon">
+                            <img src="img/business.png" alt="Service 1">
+                        </div>
+                        <h3 class="service-title">Business Process Automation</h3>
+                        <p class="service-description">We provide different business automation process ranging from docuemnt management, customer relationship management, human resources management</p>
+                        <a href="#" class="btn">View Details</a>
+                    </div>
+                    <div class="service-item">
+                        <div class="service-icon">
+                            <img src="img/graphics.png" alt="Service 2">
+                        </div>
+                        <h3 class="service-title">Graphics/Brand Identity Design</h3>
+                        <p class="service-description">With deep design principles, web design trends, and user experience as a key factor of an identity we provide effective and engaging brand identity for our clients.</p>
+                        <a href="#" class="btn">View Details</a>
+                    </div>
+                    <div class="service-item">
+                        <div class="service-icon">
+                            <img src="img/software.png" alt="Service 3">
+                        </div>
+                        <h3 class="service-title">Software Consulting</h3>
+                        <p class="service-description">We provide expert advice adn guidance to organizations on software related issues.</p>
+                        <a href="#" class="btn">View Details</a>
                     </div>
                 </div>
                 <button class="scroll-btn right" id="scroll-right"><img src="img/move-right.png" alt=""></button>
@@ -139,7 +140,7 @@
     <!-- About us -->
     <section class="about" id="about">
         <div class="container">
-            <h2 class="about-title">Why Choose Us</h2>
+            <h1 class="about-title">Why Choose Us</h1>
             <div class="about-content">
                 <div class="about-image">
                     <img src="img/about.png" alt="About Us">
@@ -291,14 +292,14 @@
         <div class="container">
             <h2>Our Partners</h2>
             <p>We collaborate with industry-leading companies to deliver the best services to our clients.</p>
-            <div class="partners-grid">
-                <div class="partner-item">
-                    <img src="img/pecstech.jpeg" alt="PECSTECH Africa">
+            <div class="partners-container">
+                <div class="partner-card">
+                    <img src="img/pecstech.jpeg" alt="PECSTECH AFRICA">
                 </div>
-                <div class="partner-item">
-                    <img src="img/j.jpeg" alt="Partner 2">
+                <div class="partner-card">
+                    <img src="img/j.jpeg" alt="J Company">
                 </div>
-                <div class="partner-item">
+                <div class="partner-card">
                     <img src="img/zallasoft.png" alt="ZallaSoft IT">
                 </div>
             </div>
