--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <!-- clients journey  -->
     <section class="clients-journey" id="clients-journey">
         <div class="container">
-            <h2 class="section-title">Our Client's Journey</h2>
+            <h1 class="section-title">Our Client's Journey</h1>
             <div class="journey-wrapper">
                 <div class="journey-item">
                     <div class="journey-icon">
@@ -206,7 +206,7 @@
                     </div>
                     <h3 class="journey-title">Consulting</h3>
                     <p class="journey-description">This is the first stage where we understand your business needs and we analyze these needs with our business development team in order to help position you in the right track.</p>
-                    </div>
+                </div>
                 <div class="journey-item">
                     <div class="journey-icon">
                         <img src="img/discuss.png" alt="Project Discussion">
@@ -256,10 +256,10 @@
                     <p>We take the burden of innovation and scalability off your shoulders while you focus on your business.</p>
                     <p>We also provide solutions that make it easy to run your business anywhere in the world.</p>
                     <ul class="benefits">
-                        <li><span>&#10004;</span> Technology Advice</li>
-                        <li><span>&#10004;</span> Innovation</li>
-                        <li><span>&#10004;</span> Right Solution</li>
-                        <li><span>&#10004;</span> Client's Support</li>
+                        <li><p><span>&#10004;</span> Technology Advice</p></li>
+                        <li><p><span>&#10004;</span> Innovation</p></li>
+                        <li><P><span>&#10004;</span> Right Solution</P></li>
+                        <li><p><span>&#10004;</span> Client's Support</p></li>
                     </ul>
                     <a href="contact.html" class="btn">Contact Us Today!</a>
                 </div>
