--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="services-content" id="services-content">
                     <div class="service-item">
                         <div class="service-icon">
-                            <img src="img/web.png" alt="Service 3">
+                            <img src="img/web.png" alt="web development">
                         </div>
                         <h3 class="service-title">Web Development</h3>
                         <p class="service-description">We build highly secured, scalable and fast mobile applications that meets your business needs</p>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="service-item">
                         <div class="service-icon">
-                            <img src="img/product.png" alt="Service 3">
+                            <img src="img/product.png" alt="product">
                         </div>
                         <h3 class="service-title">Product Design</h3>
                         <p class="service-description">Our team of expert designers will help bring your ideas to life.</p>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="service-item">
                         <div class="service-icon">
-                            <img src="img/seo.png" alt="Service 3">
+                            <img src="img/seo.png" alt="search engine">
                         </div>
                         <h3 class="service-title">Search Engine Optimization</h3>
                         <p class="service-description">We optimize your website to be search engine friendly and improve online visibility.</p>
@@ -109,15 +109,15 @@
                     </div>
                     <div class="service-item">
                         <div class="service-icon">
-                            <img src="img/business.png" alt="Service 1">
+                            <img src="img/business.png" alt="business process">
                         </div>
                         <h3 class="service-title">Business Process Automation</h3>
-                        <p class="service-description">We provide different business automation process ranging from docuemnt management, customer relationship management, human resources management</p>
+                        <p class="service-description">We provide different business automation process ranging from document management, customer relationship management, human resources management</p>
                         <a href="#" class="btn">View Details</a>
                     </div>
                     <div class="service-item">
                         <div class="service-icon">
-                            <img src="img/graphics.png" alt="Service 2">
+                            <img src="img/graphics.png" alt="graphics">
                         </div>
                         <h3 class="service-title">Graphics/Brand Identity Design</h3>
                         <p class="service-description">With deep design principles, web design trends, and user experience as a key factor of an identity we provide effective and engaging brand identity for our clients.</p>
@@ -128,7 +128,7 @@
                             <img src="img/software.png" alt="Service 3">
                         </div>
                         <h3 class="service-title">Software Consulting</h3>
-                        <p class="service-description">We provide expert advice adn guidance to organizations on software related issues.</p>
+                        <p class="service-description">We provide expert advice and guidance to organizations on software related issues.</p>
                         <a href="#" class="btn">View Details</a>
                     </div>
                 </div>
