--- a/about.html
+++ b/about.html
@@ -7,8 +7,6 @@
     <title>Fasticore</title>
 </head>
 <body>
-
-
     <header class="header">
         <div class="header-content">
             <div class="header-logo">
@@ -68,7 +66,14 @@
                         <img src="img/about.png" alt="About Us Image">
                     </div>
             </div>
- 
+        
+            <section class="value-proposition">
+                <div class="value-text">
+                    <h2>Our Value Proposition</h2>
+                    <p>At Fasticore Technology, we specialize in creating custom software solutions that help businesses achieve their unique goals. Our team of experienced developers and Business analysts works closely with clients to understand their needs and build scalable, secure, and user-friendly software. We prioritize quality and strive for excellence in every aspect of our work, from consultancy to project management and code development.
+                        You can expect personalized service, timely delivery, and a software solution that meets your needs by choosing us as your software development partner.</p>
+                </div>
+            </section>
             
 
  
