--- a/services.html
+++ b/services.html
@@ -7,7 +7,6 @@
     <title>Fasticore</title>
 </head>
 <body>
-
     <header class="header">
         <div class="header-content">
             <div class="header-logo">
@@ -31,21 +30,6 @@
             <div class="menu-toggle" id="menu-toggle"><img src="img/hamburger.png" alt=""></div>
         </div>
     </header>
-        <!-- <header class="header">
-            <img class="logo" src="/img/Fasticore Technology.png" alt="fasticore">
-
-            <nav class="navbar">
-                <a href="index.html">Home</a>
-                <a href="about">About Us</a>
-                <a href="services.html">Services</a>
-                <a href="affiliate.html">Affiliate</a>
-                <a href="contact.html">Contact us</a>
-            </nav>
-
-            <div class="menu-toggle" id="menu-toggle"><img src="img/hamburger.png" alt=""></div>
-
-        </header> -->
-
         <aside class="side-menu" id="side-menu">
             <div class="close-btn" id="close-btn"><img src="/img/x.png" alt=""></div>
             <a href="index.html">Home</a>
@@ -60,25 +44,18 @@
                 <img src="img/linkedin.png" alt="LinkedIn">
             </div>
         </aside>
-    <!-- hero section -->
-    <section class="hero">
-        <div class="hero-content">
-            <div class="hero-text">
-                <h1>With Few Steps:</h1>
-                <h2>Analyze, Build &amp; Deploy</h2>
-                <p>We help small, medium and large scale businesses in implementing
-                    and integrating quality technology solutions to ensure forecasted growth.
-                </p>
-                <!-- <a href="services.html" class="btn">Services</a> -->
-            </div>
-            <img src="img/hero.png" alt="hero image" class="hero-img">
+
+    <section class="services-hero">
+        <div class="container">
+            <h1>Our Services</h1>
+            <p>Explore the range of services we offer to help your business grow and succeed in the digital age.</p>
         </div>
     </section>
+    
 
     <!-- Our Services  -->
     <section class="services" id="services">
         <div class="container">
-            <h1 class="services-title">Our Services</h1>
             <div class="services-wrapper">
                 <button class="scroll-btn left" id="scroll-left"><img src="img/move-left.png" alt=""></button>
                 <div class="services-content" id="services-content">
@@ -135,65 +112,7 @@
             </div>
         </div>
     </section>
-
-    <!-- About us -->
-    <section class="about" id="about">
-        <div class="container">
-            <h1 class="about-title">Why Choose Us</h1>
-            <div class="about-content">
-                <div class="about-image">
-                    <img src="img/about.png" alt="About Us">
-                </div>
-                <div class="about-text">
-                    <h3>About Us</h3>
-                    <p>Fasticore Technology is a Software Development Company that prides itself in developing fast, quality, and scalable software Solutions/products for businesses and individuals.
-                        Fasticore was an idea born in September 2021. The idea was born as a result of seeing startups and businesses make mistakes when upscaling their business through Technology, especially regarding software integrations.</p>
-                    <h3>Our Vision</h3>
-                    <p>Bringing the best and most affordable business experience through Technology by bridging the gap between consultancy and development.</p>
-                    <h3>Our Values</h3>
-                    <p>To offer superior technology-driven solutions that bring global value to businesses and individuals</p>
-                    <a href="contact.html" class="btn">Learn More!</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- core values  -->
-    <!-- <section class="core-values" id="core-values">
-        <div class="core-container">
-            <h2 class="values-title">Our Core Values</h2>
-            <div class="values-wrapper" id="values-wrapper">
-                <div class="value-item">
-                    <div class="value-icon">
-                        <img src="img/integrity.png" alt="Integrity">
-                    </div>
-                    <h3 class="value-title">Integrity</h3>
-                    <p class="value-description">We uphold the highest standards of integrity in all our actions.</p>
-                </div>
-                <div class="value-item">
-                    <div class="value-icon">
-                        <img src="img/innovation.png" alt="Innovation">
-                    </div>
-                    <h3 class="value-title">Innovation</h3>
-                    <p class="value-description">We strive to develop new and innovative solutions for our clients.</p>
-                </div>
-                <div class="value-item">
-                    <div class="value-icon">
-                        <img src="img/excellence.png" alt="Excellence">
-                    </div>
-                    <h3 class="value-title">Excellence</h3>
-                    <p class="value-description">We continuously improve our processes and services to exceed expectations.</p>
-                </div>
-                <div class="value-item">
-                    <div class="value-icon">
-                        <img src="img/teamwork.png" alt="Teamwork">
-                    </div>
-                    <h3 class="value-title">Teamwork</h3>
-                    <p class="value-description">We work together, across boundaries, to meet the needs of our customers.</p>
-                </div>
-            </div>
-        </div>
-    </section> -->
+    <div><hr></div>
     <!-- clients journey  -->
     <section class="clients-journey" id="clients-journey">
         <div class="container">
@@ -286,7 +205,6 @@
         </div>
     </section>
 
-
     <!-- partners section  -->
     <section class="partners-section">
         <div class="container">
@@ -305,7 +223,6 @@
             </div>
         </div>
     </section>
-
 
     <!-- footer  -->
     <footer class="footer-section">
