--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,21 @@
         </div>
     </header>
 
+    <aside class="side-menu" id="side-menu">
+        <div class="close-btn" id="close-btn"><img src="/img/x.png" alt=""></div>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Us</a>
+        <a href="services.html">Services</a>
+        <a href="affiliate.html">Affiliate</a>
+        <a href="contact.html">Contact us</a>
+
+        <div class="side-social">
+            <img src="img/facebook.png" alt="Facebook">
+            <img src="img/twitter.png" alt="Twitter">
+            <img src="img/linkedin.png" alt="LinkedIn">
+        </div>
+    </aside>
+
     <!-- contact section  -->
 
     <section class="contact-section">
@@ -44,21 +59,21 @@
         <div class="container">
             <div class="contact-card">
                 <h2>Enquiry Contacts</h2>
-                <p><img src="phone-icon.png" alt="Phone"> +234 810-8208-409</p>
-                <p><img src="email-icon.png" alt="Email"> fasticore@gmail.com</p>
-                <p><img src="location-icon.png" alt="Location"> Remote</p>
+                <p><img src="img/phone.png" alt="Phone"> +234 810-8208-409</p>
+                <p><img src="img/email.png" alt="Email"> fasticore@gmail.com</p>
+                <p><img src="img/location.png" alt="Location"> Remote</p>
             </div>
             <div class="contact-card">
                 <h2>Support Contacts</h2>
-                <p><img src="phone-icon.png" alt="Phone"> +234 810-8208-409</p>
-                <p><img src="email-icon.png" alt="Email"> support@fasticoretechnology.com</p>
-                <p><img src="location-icon.png" alt="Location"> Remote</p>
+                <p><img src="img/phone.png" alt="Phone"> +234 810-8208-409</p>
+                <p><img src="img/email.png" alt="Email"> support@fasticoretechnology.com</p>
+                <p><img src="img/location.png" alt="Location"> Remote</p>
             </div>
             <div class="contact-card">
                 <h2>Service Desk Contact</h2>
-                <p><img src="phone-icon.png" alt="Phone"> +234 703-966-1249</p>
-                <p><img src="email-icon.png" alt="Email"> help@fasticoretechnology.com</p>
-                <p><img src="location-icon.png" alt="Location"> Remote</p>
+                <p><img src="img/phone.png" alt="Phone"> +234 703-966-1249</p>
+                <p><img src="img/email.png" alt="Email"> help@fasticoretechnology.com</p>
+                <p><img src="img/location.png" alt="Location"> Remote</p>
             </div>
         </div>
     </section>
