--- a/contact.html
+++ b/contact.html
@@ -57,23 +57,25 @@
 
     <section class="contact-info">
         <div class="container">
-            <div class="contact-card">
-                <h2>Enquiry Contacts</h2>
-                <p><img src="img/phone.png" alt="Phone"> +234 810-8208-409</p>
-                <p><img src="img/email.png" alt="Email"> fasticore@gmail.com</p>
-                <p><img src="img/location.png" alt="Location"> Remote</p>
-            </div>
-            <div class="contact-card">
-                <h2>Support Contacts</h2>
-                <p><img src="img/phone.png" alt="Phone"> +234 810-8208-409</p>
-                <p><img src="img/email.png" alt="Email"> support@fasticoretechnology.com</p>
-                <p><img src="img/location.png" alt="Location"> Remote</p>
-            </div>
-            <div class="contact-card">
-                <h2>Service Desk Contact</h2>
-                <p><img src="img/phone.png" alt="Phone"> +234 703-966-1249</p>
-                <p><img src="img/email.png" alt="Email"> help@fasticoretechnology.com</p>
-                <p><img src="img/location.png" alt="Location"> Remote</p>
+            <div class="contact-wrapper">
+                <div class="contact-card">
+                    <h2>Enquiry Contacts</h2>
+                    <p><img src="img/phone.png" alt="Phone"> +234 810-8208-409</p>
+                    <p><img src="img/email.png" alt="Email"> fasticore@gmail.com</p>
+                    <p><img src="img/location.png" alt="Location"> Remote</p>
+                </div>
+                <div class="contact-card">
+                    <h2>Support Contacts</h2>
+                    <p><img src="img/phone.png" alt="Phone"> +234 810-8208-409</p>
+                    <p><img src="img/email.png" alt="Email"> support@fasticoretechnology.com</p>
+                    <p><img src="img/location.png" alt="Location"> Remote</p>
+                </div>
+                <div class="contact-card">
+                    <h2>Service Desk Contact</h2>
+                    <p><img src="img/phone.png" alt="Phone"> +234 703-966-1249</p>
+                    <p><img src="img/email.png" alt="Email"> help@fasticoretechnology.com</p>
+                    <p><img src="img/location.png" alt="Location"> Remote</p>
+                </div>
             </div>
         </div>
     </section>
