--- a/index.html
+++ b/index.html
@@ -349,6 +349,8 @@
         </div>
     </footer>
 
+    <button onclick="scrollToTop()" id="ScrollToTopBtn" title="Go to top"><img src="img/top.png" alt=""></button>
+
     
     <script src="js/script.js"></script>
 </body>
