--- a/services.html
+++ b/services.html
@@ -266,6 +266,7 @@
         </div>
     </footer>
 
+    <button onclick="scrollToTop()" id="ScrollToTopBtn" title="Go to top">Top</button>
     
     <script src="js/script.js"></script>
 </body>
