--- a/services.html
+++ b/services.html
@@ -266,7 +266,7 @@
         </div>
     </footer>
 
-    <button onclick="scrollToTop()" id="ScrollToTopBtn" title="Go to top">Top</button>
+    <button onclick="scrollToTop()" id="ScrollToTopBtn" title="Go to top"><img src="img/top.png" alt=""></button>
     
     <script src="js/script.js"></script>
 </body>
